--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="activity-1/index.html" target="blank">Activity 1</a></li>
                 <li><a href="activity-2/index.html" target="blank">Activity 2</a></li>
+                <li><a href="activity-3/index.html" target="blank">Activity 3</a></li>
             </ul>
         </section>
     </main>
