--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="activity-2/index.html" target="blank">Activity 2</a></li>
                 <li><a href="activity-3/index.html" target="blank">Activity 3</a></li>
                 <li><a href="activity-4/index.html" target="blank">activity-4</a></li>
+                <li><a href="activity-5/index.html" target="blank">activity-4</a></li>
             </ul>
         </section>
     </main>
