--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
                 <li><a href="activity-2/index.html" target="blank">Activity 2</a></li>
                 <li><a href="activity-3/index.html" target="blank">Activity 3</a></li>
                 <li><a href="activity-4/index.html" target="blank">activity-4</a></li>
-                <li><a href="activity-5/index.html" target="blank">activity-4</a></li>
-                <li><a hre<li><a href="activity-6/index.html" target="blank">activity-6</a></li>
+                <li><a href="activity-5/index.html" target="blank">activity-5</a></li>
+                <li><a href="activity-6/index.html" target="blank">activity-6</a></li>
+                <li><a href="activity-7/index.html" target="blank">activity-7</a></li>
+                <li><a href="project-1/index.html" target="blank">project-1</a></li>
             </ul>
         </section>
     </main>
