--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <li><a href="activity-5/index.html" target="blank">activity-5</a></li>
                 <li><a href="activity-6/index.html" target="blank">activity-6</a></li>
                 <li><a href="activity-7/index.html" target="blank">activity-7</a></li>
+                <li><a href="activity-8/index.html" target="blank">activity-8</a></li>                
+
                 <li><a href="project-1/index.html" target="blank">project-1</a></li>
             </ul>
         </section>
