--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="activity-8/index.html" target="blank">activity-8</a></li>                
 
                 <li><a href="project-1/index.html" target="blank">project-1</a></li>
+                <li><a href="project-2/index.html" target="blank">project-2</a></li>
             </ul>
         </section>
     </main>
